fix hero bg not showing - 3

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ header {
 
 /* ~ HERO ~ */
 #hero {
-  background: url('../public/images/hero-bg-desktop.jpg');
+  background-image: url('../public/images/hero-bg-desktop.jpg');
   background-color: var(--cl-primary-shade);
   /* height: 76vh; */
   height: 700px;
